all data loading

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ESNext",
         "module": "ESNext",
-        "moduleResolution": "node",
+        "moduleResolution": "nodenext",
         "noImplicitOverride": true,
         "allowJs": true,
         "checkJs": false,
