--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "@types/rbush": "^3.0.0",
         "@typescript/vfs": "^1.4.0",
         "bl": "^5.0.0",
+        "buffer": "^6.0.3",
         "bw-casclib": "^2.0.2",
         "bw-chk": "^1.4.0",
         "camera-controls": "1.37.2",
@@ -108,7 +109,7 @@
         "pacote": "^14.0.0",
         "pkware-wasm": "^1.0.0",
         "postprocessing": "6.32.2",
-        "process-replay": "0.0.5",
+        "process-replay": "0.0.11",
         "random": "^3.0.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -184,6 +185,7 @@
         "vite": "^3.1.3",
         "vite-plugin-electron": "^0.9.3",
         "vite-plugin-esmodule": "^1.4.2",
+        "vite-plugin-mkcert": "^1.16.0",
         "vite-plugin-node-polyfills": "^0.15.0",
         "webgl-lint": "^1.9.3"
     },
