--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
+        "target": "ES2020",
+        "module": "ES2020",
         "moduleResolution": "Node",
         "noImplicitOverride": true,
         "allowJs": true,
