--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
         "lint": "yarn eslint . && yarn prettier --check .",
         "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch",
         "build-api-types": "ts-node -T .\\build\\api-types\\index.ts",
-        "build-api-docs:host": "typedoc --out docs/host --tsconfig tsconfig.host-api.json build/api-types/host/index.d.ts",
-        "build-api-docs:ui": "typedoc --out docs/ui --tsconfig tsconfig.ui-api.json build/api-types/ui/index.d.ts",
-        "build-api-docs": "yarn build-api-docs:host && yarn build-api-docs:ui",
+        "build-plugin-api-docs:host": "typedoc --out docs/host --tsconfig tsconfig.host-api.json build/api-types/host/index.d.ts",
+        "build-plugin-api-docs:ui": "typedoc --out docs/ui --tsconfig tsconfig.ui-api.json build/api-types/ui/index.d.ts",
+        "build-api-docs": "yarn build-plugin--api-docs:host && yarn build-plugin--api-docs:ui",
+        "plugins:build": "ts-node -T .\\build\\plugins\\build-plugins.ts",
+        "plugins:serve": "http-server .\\dist\\plugins -p 8090 --cors",
         "web": "vite -c vite.config.web.ts",
         "web:build": "vite build -c vite.config.web.ts",
-        "ui-server": "yarn ui-server:build && node dist/ui-server/index.js",
-        "ui-server:build": "node build.ui-server.mjs"
+        "runtime:build": "vite build -c vite.config.runtime.ts",
+        "plugins": "plugins:build && runtime:build && plugins:serve"
     },
     "license": "GPL-3.0",
     "repository": {
@@ -50,6 +52,7 @@
         "@codemirror/state": "^6.2.0",
         "@codemirror/view": "^6.9.5",
         "@npmcli/package-json": "^2.0.0",
+        "@supabase/supabase-js": "^2.38.2",
         "@types/lodash.set": "^4.3.7",
         "@typescript/vfs": "^1.4.0",
         "bl": "^5.0.0",
@@ -129,6 +132,7 @@
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "http-server": "^14.1.1",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
         "jest-extended": "^3.1.0",
