--- a/package.json
+++ b/package.json
@@ -11,19 +11,17 @@
         "test": "jest --watchAll",
         "test:once": "jest --runInBand",
         "test:debug": "node --inspect node_modules/jest/bin/jest --runInBand",
-        "clear-cache": "rimraf .cache dist",
+        "test:build": "http-server .\\dist\\titan-reactor -p 80",
         "lint": "yarn eslint . && yarn prettier --check .",
         "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch",
-        "build-api-types": "ts-node -T .\\build\\api-types\\index.ts",
-        "build-plugin-api-docs:host": "typedoc --out docs/host --tsconfig tsconfig.host-api.json build/api-types/host/index.d.ts",
-        "build-plugin-api-docs:ui": "typedoc --out docs/ui --tsconfig tsconfig.ui-api.json build/api-types/ui/index.d.ts",
-        "build-api-docs": "yarn build-plugin--api-docs:host && yarn build-plugin--api-docs:ui",
-        "plugins:build": "ts-node -T .\\build\\plugins\\build-plugins.ts",
-        "plugins:serve": "http-server .\\dist\\plugins -p 8090 --cors",
+        "generate:api-types": "ts-node -T .\\build\\api-types\\index.ts",
+        "generate:plugin-api-docs": "typedoc --out docs/host --tsconfig tsconfig.host-api.json build/api-types/host/index.d.ts && typedoc --out docs/ui --tsconfig tsconfig.ui-api.json build/api-types/ui/index.d.ts",
+        "build:plugins": "ts-node -T ./esbuild.runtime.ts && ts-node -T .\\build\\plugins\\build-plugins.ts",
+        "serve:plugins": "http-server .\\dist\\plugins -p 8090 --cors",
         "web": "vite -c vite.config.web.ts",
-        "web:build": "vite build -c vite.config.web.ts",
-        "runtime:build": "ts-node -T ./esbuild.runtime.ts",
-        "plugins:all": "yarn runtime:build && yarn plugins:build  && yarn plugins:serve"
+        "build:web": "vite build -c vite.config.web.ts",
+        "plugins": "yarn build:plugins && yarn serve:plugins",
+        "build": "yarn build:web && yarn build:plugins"
     },
     "repository": {
         "type": "git",
