--- a/.github/workflows/titan-reactor.yml
+++ b/.github/workflows/titan-reactor.yml
@@ -17,7 +17,12 @@ jobs:
     steps:
       - name: Checkout 🛎
         uses: actions/checkout@v3
+        with:
+          lfs: true
 
+      - name: Checkout LFS objects
+        run: git lfs checkout
+        
       - name: Setup node env 🏗
         uses: actions/setup-node@v3
         with:
