--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
         "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch",
         "generate:api-types": "ts-node -T .\\build\\api-types\\index.ts",
         "generate:plugin-api-docs": "typedoc --out docs/host --tsconfig tsconfig.host-api.json build/api-types/host/index.d.ts && typedoc --out docs/ui --tsconfig tsconfig.ui-api.json build/api-types/ui/index.d.ts",
-        "serve:plugins": "http-server .\\dist\\plugins -p 8091 --cors",
         "build:runtime": "ts-node -T ./esbuild.runtime.ts",
         "serve:runtime": "http-server .\\dist\\runtime -p 8090 --cors",
         "web": "vite -c vite.config.web.ts",
         "runtime": "yarn build:runtime && yarn serve:runtime",
-        "build": "vite build -c vite.config.web.ts"
+        "build": "vite build -c vite.config.web.ts && yarn build:runtime"
     },
     "repository": {
         "type": "git",
