add currentVelocityDirection to flingy

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "test:build": "http-server .\\dist\\titan-reactor -p 80",
         "lint": "yarn eslint . && yarn prettier --check .",
         "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch",
-        "generate:api-types": "ts-node -T .\\build\\api-types\\index.ts",
-        "generate:plugin-api-docs": "typedoc --out docs/host --tsconfig tsconfig.host-api.json build/api-types/host/index.d.ts && typedoc --out docs/ui --tsconfig tsconfig.ui-api.json build/api-types/ui/index.d.ts",
+        "build:api-types": "ts-node -T .\\build\\api-types\\index.ts",
+        "build:plugin-api-docs": "typedoc --out docs/host --tsconfig tsconfig.host-api.json build/api-types/host/index.d.ts && typedoc --out docs/ui --tsconfig tsconfig.ui-api.json build/api-types/ui/index.d.ts",
         "build:runtime": "ts-node -T ./esbuild.runtime.ts",
         "serve:runtime": "http-server .\\dist\\runtime -p 8090 --cors",
         "web": "vite -c vite.config.web.ts",
